src/config/email/sendgrid/snapshots/roadster__config__email__sendgrid__tests__default_config_per_env@case_2.snap
---
source: src/config/email/sendgrid/mod.rs
expression: config
---
Some(
    File {
        source: FileSourceString(
            "[email.sendgrid]\nsandbox = false\n",
        ),
        format: Some(
            Toml,
        ),
        required: true,
    },
)
