src/config/email/sendgrid/snapshots/roadster__config__email__sendgrid__tests__message_from_email@case_02.snap
---
source: src/config/email/sendgrid/mod.rs
expression: message
---
{
  "from": {
    "email": "no-reply@example.com"
  },
  "subject": "",
  "personalizations": [],
  "reply_to": {
    "email": "no-reply@example.com",
    "name": "No Reply"
  },
  "mail_settings": {
    "sandbox_mode": {
      "enable": false
    }
  }
}
