src/config/email/sendgrid/snapshots/roadster__config__email__sendgrid__tests__message_from_email@case_1.snap
---
source: src/config/email/sendgrid/mod.rs
expression: message
---
{
  "from": {
    "email": "no-reply@example.com",
    "name": "No Reply"
  },
  "subject": "",
  "personalizations": [],
  "mail_settings": {
    "sandbox_mode": {
      "enable": true
    }
  }
}
