src/config/email/sendgrid/snapshots/roadster__config__email__sendgrid__tests__serialization@case_4.snap
---
source: src/config/email/sendgrid/mod.rs
expression: sendgrid
---
api-key = 'api-key'
sandbox = false
https-only = true
